--- a/App/mobile/src/main/AndroidManifest.xml
+++ b/App/mobile/src/main/AndroidManifest.xml
@@ -2,11 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs160.joleary.catnip">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -27,10 +32,27 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name=".FetchAddressIntentService"
+            android:exported="false"/>
+
         <activity
-            android:name=".CongressionalMain"
-            android:label="@string/title_activity_congressional_main" />
-        <activity android:name=".DetailedView"></activity>
+            android:name=".CongressionalMain" />
+
+        <activity android:name=".DetailedView" />
+
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="53c673d8a053bec8d6ea83a8a350690aa4692315" />
+        <!--
+             ATTENTION: This was auto-generated to add Google Play services to your project for
+             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".DetailedTweet"/>
     </application>
 
 </manifest>
